--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="dropdown">
       <input type="image" src="Bulldog.png" alt="bulldoglogo" height= "100px" class="logo">
       <div class="dropdown-content">
-        <a href = "file:///D:/Website_Workshop/First%20Day/index.html"> Home</a>
+        <a href = "https://jayjayayala8.github.io/JaimeAyalaWebsite.github.io/"> Home</a>
         <a href="https://www.youtube.com/watch?v=ljrgs4TzkTQ&pp=ygUhdmVuaWNlIHF1ZWVuIGxpdmUgYXQgc2xhbmUgY2FzdGxl">The GOAT</a>
       </div>
     </div>
